--- a/bower.json
+++ b/bower.json
@@ -4,12 +4,14 @@
   "dependencies": {
     "angular": "^1.3.0",
     "bootstrap": "^3.2.0",
-    "angular-animate": "^1.3.0",
+    "angular-animate": "~1.3.15",
     "angular-cookies": "^1.3.0",
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "angular-i18n": "~1.3.15",
+    "angular-bootstrap": "~0.12.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
